--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap"
+      rel="stylesheet"
+    />
 
     <script
       src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
