--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./fcon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -34,15 +34,16 @@
       integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
       crossorigin=""
     ></script>
-    <!-- <script src="https://unpkg.com/leaflet" type="text/javascript"></script>
+
+    <script src="https://unpkg.com/leaflet" type="text/javascript"></script>
     <script
       src="https://unpkg.com/leaflet-ant-path"
       type="text/javascript"
-    ></script> -->
+    ></script>
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Bike</title>
+    <title>Rider</title>
   </head>
   <body>
     <div id="root"></div>
